--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="from">From</string>
+    <string name="to">To</string>
+    <string name="details">Details</string>
 </resources>
